--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -207,7 +207,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.131.160;
 allow 177.153.51.238;
 allow 177.93.140.66;
 allow 178.162.175.5;
@@ -245,6 +244,7 @@ allow 185.100.87.136;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -650,6 +650,7 @@ allow 199.195.253.156;
 allow 199.195.253.180;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
+allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
@@ -925,6 +926,7 @@ allow 23.129.64.153;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
+allow 23.137.254.244;
 allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.184.48.78;
@@ -959,7 +961,6 @@ allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
 allow 23.236.122.193;
-allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8902::f03c:95ff:fe1e:6065;
 allow 2400:8905::f03c:95ff:fe67:ec03;
@@ -995,6 +996,7 @@ allow 2602:f6f6:2:d31a::1;
 allow 2602:fa59:4:246::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
+allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -1309,6 +1311,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1323,6 +1326,7 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
+allow 2a0a:3840:8078:31:0:504e:1f19:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1882,6 +1886,7 @@ allow 79.133.57.64;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
+allow 80.78.31.25;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 80.94.92.135;
@@ -1916,6 +1921,7 @@ allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.12;
+allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
@@ -1925,7 +1931,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
