--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,5 +1,6 @@
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
+deny 2001:1b60:3:221:3132:102:0:1;
 deny 2001:1b60:3:221:4134:101:0:1;
 deny 2001:1b60:3:221:701:102:0:1;
 deny 2001:1b60:3:239:1003:103:0:1;
@@ -104,7 +105,6 @@ deny 2001:b030:2422::7234;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
-deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
 deny 2400:8902::f03c:95ff:fe1e:6065;
 deny 2400:8905::f03c:95ff:fe67:ec03;
@@ -134,6 +134,7 @@ deny 2602:f6f6:2:d31a::1;
 deny 2602:fa59:4:246::1;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
+deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
@@ -447,6 +448,7 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -461,6 +463,7 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
+deny 2a0a:3840:8078:31:0:504e:1f19:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
