--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -207,7 +207,6 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.131.160;
 set_real_ip_from 177.153.51.238;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.162.175.5;
@@ -245,6 +244,7 @@ set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
+set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
@@ -650,6 +650,7 @@ set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
+set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
 set_real_ip_from 2001:1b60:3:221:701:102:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
@@ -925,6 +926,7 @@ set_real_ip_from 23.129.64.153;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
+set_real_ip_from 23.137.254.244;
 set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.78;
@@ -959,7 +961,6 @@ set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
 set_real_ip_from 23.236.122.193;
-set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
 set_real_ip_from 2400:8902::f03c:95ff:fe1e:6065;
 set_real_ip_from 2400:8905::f03c:95ff:fe67:ec03;
@@ -995,6 +996,7 @@ set_real_ip_from 2602:f6f6:2:d31a::1;
 set_real_ip_from 2602:fa59:4:246::1;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fc24:10:61b::1;
+set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
@@ -1309,6 +1311,7 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -1323,6 +1326,7 @@ set_real_ip_from 2a09:61c0::21;
 set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
+set_real_ip_from 2a0a:3840:8078:31:0:504e:1f19:1337;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
@@ -1882,6 +1886,7 @@ set_real_ip_from 79.133.57.64;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
+set_real_ip_from 80.78.31.25;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 80.94.92.135;
@@ -1916,6 +1921,7 @@ set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.12;
+set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.254.132;
@@ -1925,7 +1931,6 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
-set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
