--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -241,7 +241,6 @@ set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
-set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
@@ -465,6 +464,7 @@ set_real_ip_from 185.246.128.161;
 set_real_ip_from 185.246.188.149;
 set_real_ip_from 185.246.188.73;
 set_real_ip_from 185.246.188.74;
+set_real_ip_from 185.246.189.251;
 set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
@@ -631,6 +631,7 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
+set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.61.60;
@@ -1000,6 +1001,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1230,6 +1232,7 @@ set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:4780:2d:ea47::1;
 set_real_ip_from 2a02:4840:1:3::16;
+set_real_ip_from 2a02:4840:1:3::2a;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
@@ -1279,7 +1282,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1305,7 +1307,6 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
-set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
@@ -1818,7 +1819,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1910,10 +1910,10 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.38.130.33;
+set_real_ip_from 84.38.130.50;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.90.196.162;
 set_real_ip_from 85.93.218.204;
-set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.12;
@@ -1923,6 +1923,7 @@ set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.254.132;
 set_real_ip_from 87.120.93.182;
 set_real_ip_from 88.151.194.24;
+set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
@@ -1984,7 +1985,6 @@ set_real_ip_from 94.32.179.134;
 set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.104.135;
 set_real_ip_from 94.74.164.89;
-set_real_ip_from 94.74.164.94;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
