--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -100,8 +100,7 @@ deny 2001:67c:e60:c0c:192:42:116:217;
 deny 2001:67c:e60:c0c:192:42:116:218;
 deny 2001:67c:e60:c0c:192:42:116:219;
 deny 2001:ac8:22:43::20e5:a7d7;
-deny 2001:b011:4006:7826::b;
-deny 2001:b030:2422::7234;
+deny 2001:b011:4006:545c::b;
 deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -373,7 +372,6 @@ deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:4780:2d:ea47::1;
-deny 2a02:4840:1:3::16;
 deny 2a02:4840:1:3::2a;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
@@ -424,6 +422,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -449,7 +448,6 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -464,7 +462,6 @@ deny 2a09:61c0::21;
 deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
-deny 2a0a:3840:8078:31:0:504e:1f19:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
@@ -726,13 +723,11 @@ deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a11:6100:0:1467::;
 deny 2a11:6100:0:156b::;
-deny 2a11:6100:0:1e6a::1;
 deny 2a12:6fc2:8000::1b1;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:223;
 deny 2a12:a800:11:1:124:198:131:253;
 deny 2a12:a800:11:1:124:198:132:172;
-deny 2a12:a800:11:1:124:198:132:237;
 deny 2a12:a800:11:1:124:198:132:52;
 deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:1:1:2:58:56:220;
